argocd/projects/immich/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgresql
  namespace: immich
  labels:
    app: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
        resources:  {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgresql-data
