argocd/projects/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  postgresql
  namespace: immich
spec:
  selector:
    app:  postgresql
  type: ClusterIP
  ports:
    - name:  postgres
      port:  5432
      protocol: TCP
