argocd/projects/immich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
spec:
  ingressClassName: nginx
  rules:
  - host: immich.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: https
            port:
              number: 3001
